RESOLVED FIXED115461
JSC crashes when JSContextGroupSetExecutionTimeLimit() specified a null callback
https://bugs.webkit.org/show_bug.cgi?id=115461
Summary JSC crashes when JSContextGroupSetExecutionTimeLimit() specified a null callback
Mark Lam
Reported 2013-04-30 19:22:07 PDT
JSContextGroupSetExecutionTimeLimit() should not pass a callback to the VM watchdog if its client did not pass one in i.e. when callback is null.
Attachments
the patch. (5.45 KB, patch)
2013-04-30 19:33 PDT, Mark Lam
no flags
Mark Lam
Comment 1 2013-04-30 19:33:00 PDT
Created attachment 200199 [details] the patch.
Mark Lam
Comment 2 2013-04-30 19:39:49 PDT
Reviewed offline by Geoffrey Garen. Landed in r149420: <http://trac.webkit.org/changeset/149420>.
Note You need to log in before you can comment on or make changes to this bug.