JSContextGroupSetExecutionTimeLimit() should not pass a callback to the VM watchdog if its client did not pass one in. https://bugs.webkit.org/show_bug.cgi?id=115461.

Reviewed by Geoffrey Garen.

* API/JSContextRef.cpp:
(internalScriptTimeoutCallback):
(JSContextGroupSetExecutionTimeLimit):
* API/tests/testapi.c:
(main):
- Added test case when the time limit callback is 0.
- Also updated a check to verify that a TerminatedExecutionException is
  thrown when the time out is cancelled.
- Also fixed some cosmetic typos.



Canonical link: https://commits.webkit.org/133902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149420 268f45cc-cd09-0410-ab3c-d52691b4dbfc